Fix: Optimize for demo mode - Disable Stripe integration and simplify Vercel config

--- a/checkout.html
+++ b/checkout.html
@@ -242,12 +242,12 @@
                     </div>
                     
                     <!-- Demo Notice -->
-                    <div class="bg-trust-blue-500/20 border border-trust-blue-400/30 rounded-lg p-4 mb-6 backdrop-blur-sm">
+                    <div class="bg-gold-400/20 border border-gold-400/30 rounded-lg p-4 mb-6 backdrop-blur-sm">
                         <div class="flex items-start space-x-3">
-                            <i class="fas fa-info-circle text-trust-blue-400 mt-1"></i>
+                            <i class="fas fa-theater-masks text-gold-400 mt-1"></i>
                             <div>
-                                <h4 class="font-semibold text-trust-blue-400">Demo Mode</h4>
-                                <p class="text-sm text-gray-300">This is a demonstration checkout. No real payment will be processed.</p>
+                                <h4 class="font-semibold text-gold-400">🎭 Demo Mode</h4>
+                                <p class="text-sm text-gray-300">This is a demonstration landing page. No real payment processing is active.</p>
                             </div>
                         </div>
                     </div>
