Fix: Update Discord invite link to https://discord.gg/kt3KkKxG - Replace all old links with working invite link

--- a/checkout.html
+++ b/checkout.html
@@ -437,12 +437,12 @@
                             Join Discord Now
                         </h4>
                         <p class="text-gray-300 text-sm mb-4">Click the button below to join our exclusive Discord server:</p>
-                        <a href="https://discord.gg/ZsRpyNrk" target="_blank" 
-                           class="inline-block bg-gradient-to-r from-purple-600 to-purple-700 hover:from-purple-700 hover:to-purple-800 text-white font-bold text-lg px-6 py-3 rounded-lg transition-all duration-300 transform hover:scale-105 mb-4 w-full">
-                            <i class="fab fa-discord mr-2"></i>
-                            Join Keeton Trades Discord
-                        </a>
-                        <p class="text-xs text-gray-400">Or copy this invite link: <code class="text-gold-400">https://discord.gg/ZsRpyNrk</code></p>
+                                                 <a href="https://discord.gg/kt3KkKxG" target="_blank" 
+                            class="inline-block bg-gradient-to-r from-purple-600 to-purple-700 hover:from-purple-700 hover:to-purple-800 text-white font-bold text-lg px-6 py-3 rounded-lg transition-all duration-300 transform hover:scale-105 mb-4 w-full">
+                             <i class="fab fa-discord mr-2"></i>
+                             Join Keeton Trades Discord
+                         </a>
+                         <p class="text-xs text-gray-400">Or copy this invite link: <code class="text-gold-400">https://discord.gg/kt3KkKxG</code></p>
                     </div>
                     
                     <div class="bg-trust-blue-400/10 border border-trust-blue-400/20 rounded-xl p-4 mb-6">
